pushing to new branch -- undoing changes then redoing ?